; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_synclink.c_mgsl_free_buffer_list_memory.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_synclink.c_mgsl_free_buffer_list_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mgsl_struct = type { i64, i32*, i32*, i32*, i32 }

@MGSL_BUS_TYPE_PCI = common dso_local global i64 0, align 8
@BUFFERLISTSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mgsl_struct*)* @mgsl_free_buffer_list_memory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mgsl_free_buffer_list_memory(%struct.mgsl_struct* %0) #0 {
  %2 = alloca %struct.mgsl_struct*, align 8
  store %struct.mgsl_struct* %0, %struct.mgsl_struct** %2, align 8
  %3 = load %struct.mgsl_struct*, %struct.mgsl_struct** %2, align 8
  %4 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %3, i32 0, i32 3
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %22

7:                                                ; preds = %1
  %8 = load %struct.mgsl_struct*, %struct.mgsl_struct** %2, align 8
  %9 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @MGSL_BUS_TYPE_PCI, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %22

13:                                               ; preds = %7
  %14 = load i32, i32* @BUFFERLISTSIZE, align 4
  %15 = load %struct.mgsl_struct*, %struct.mgsl_struct** %2, align 8
  %16 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %15, i32 0, i32 3
  %17 = load i32*, i32** %16, align 8
  %18 = load %struct.mgsl_struct*, %struct.mgsl_struct** %2, align 8
  %19 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %18, i32 0, i32 4
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @dma_free_coherent(i32* null, i32 %14, i32* %17, i32 %20)
  br label %22

22:                                               ; preds = %13, %7, %1
  %23 = load %struct.mgsl_struct*, %struct.mgsl_struct** %2, align 8
  %24 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %23, i32 0, i32 3
  store i32* null, i32** %24, align 8
  %25 = load %struct.mgsl_struct*, %struct.mgsl_struct** %2, align 8
  %26 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %25, i32 0, i32 2
  store i32* null, i32** %26, align 8
  %27 = load %struct.mgsl_struct*, %struct.mgsl_struct** %2, align 8
  %28 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %27, i32 0, i32 1
  store i32* null, i32** %28, align 8
  ret void
}

declare dso_local i32 @dma_free_coherent(i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
